--- a/index.html
+++ b/index.html
@@ -5,9 +5,7 @@
 -o-background-size: cover;
 background-size: cover;"> >
 <body>
-
- <center><h1>Welcome</h1>
-<p>I'm hosted with GitHub Pages.</p></center>
+Under Construction
 
 </body>
 </html>
