--- a/index.html
+++ b/index.html
@@ -3,9 +3,19 @@
 -webkit-background-size: cover;
 -moz-background-size: cover;
 -o-background-size: cover;
-background-size: cover;"> >
+background-size: cover;"> 
+<head>
+<meta charset="utf-8">
+<title>Shawn A</title>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/jquery.min.js"></script>
+</head>
+  
 <body>
-Under Construction
+<div class="flip-book-container" src="books/pdf/Notebook.pdf"></div>
 
+<script src="js/three.min.js"></script>
+<script src="js/pdf.min.js"></script>
+<script src="js/3dflipbook.min.js"></script>
 </body>
 </html>
