--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ background-size: cover;">
 </head>
   
 <body>
-<div class="flip-book-container" src="books/pdf/Notebook.pdf"></div>
+<div class="book-container" src="pdf/Notebook.pdf"></div>
 
 <script src="js/three.min.js"></script>
 <script src="js/pdf.min.js"></script>
