--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ background-size: cover;">
   
 <body>
 <div class="book-container" src="pdf/Notebook.pdf"></div>
-
+<center>Work in progress!</center>
 <script src="js/three.min.js"></script>
 <script src="js/pdf.min.js"></script>
 <script src="js/3dflipbook.min.js"></script>
